fix for spacing of new logo implementation.

--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 50vh 0 0;
+  margin: 40vh 0 0;
 }
 
 /* .name-text {
@@ -134,7 +134,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 50vh 0 0;
+    margin: 40vh 0 0;
   }
   
   /* .name-text {
@@ -235,7 +235,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 50vh 0 0;
+    margin: 40vh 0 0;
   }
   
 /*   .name-text {
